--- a/views/build.gradle
+++ b/views/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 group = 'com.zarinpal'
-version = '0.0.3'
+version = '0.0.4'
 
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -62,10 +62,10 @@ bintray {
         userOrg = 'zarinpali'
 
         version {
-            name = '0.0.3'
+            name = '0.0.4'
             desc = 'Zarinpal Custom BottomSheet'
             released = new Date()
-            vcsTag = '0.0.3'
+            vcsTag = '0.0.4'
         }
 
         licenses = ['Apache-2.0']
@@ -84,4 +84,6 @@ dependencies {
     compile 'me.zhanghai.android.materialedittext:library:1.0.5'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.pkmmte.view:circularimageview:1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
