--- a/views/build.gradle
+++ b/views/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 group = 'com.zarinpal'
-version = '0.1.2'
+version = '0.1.3'
 
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -62,10 +62,10 @@ bintray {
         userOrg = 'zarinpali'
 
         version {
-            name = '0.1.2'
+            name = '0.1.3'
             desc = 'Zarinpal Custom BottomSheet'
             released = new Date()
-            vcsTag = '0.1.2'
+            vcsTag = '0.1.3'
         }
 
         licenses = ['Apache-2.0']
@@ -86,4 +86,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.pkmmte.view:circularimageview:1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:support-annotations:27.0.2'
 }
