--- a/views/build.gradle
+++ b/views/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     compile 'me.zhanghai.android.materialedittext:library:1.0.5'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.pkmmte.view:circularimageview:1.1'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-annotations:27.0.2'
 }
