--- a/views/build.gradle
+++ b/views/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
 
 
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -27,7 +27,7 @@ android {
 }
 
 group = 'com.zarinpal'
-version = '0.2.3'
+version = '0.2.4'
 
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -62,10 +62,10 @@ bintray {
         userOrg = 'zarinpali'
 
         version {
-            name = '0.2.3'
+            name = '0.2.4'
             desc = 'Zarinpal Custom BottomSheet'
             released = new Date()
-            vcsTag = '0.2.3'
+            vcsTag = '0.2.4'
         }
 
         licenses = ['Apache-2.0']
@@ -77,9 +77,10 @@ bintray {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:27.0.2'
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:design:27.0.2'
     testImplementation 'junit:junit:4.12'
     compile 'me.zhanghai.android.materialedittext:library:1.0.5'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
