--- a/views/build.gradle
+++ b/views/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 group = 'com.zarinpal'
-version = '0.4.0'
+version = '0.4.1.1'
 
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -62,10 +62,10 @@ bintray {
         userOrg = 'zarinpali'
 
         version {
-            name = '0.4.0'
-            desc = 'Zarinpal Custom BottomSheet'
+            name = '0.4.1.1'
+            desc = 'Zarinpal Custom Views'
             released = new Date()
-            vcsTag = '0.4.0'
+            vcsTag = '0.4.1.1'
         }
 
         licenses = ['Apache-2.0']
