--- a/views/build.gradle
+++ b/views/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 group = 'com.zarinpal'
-version = '0.4.1.1'
+version = '0.4.1.3'
 
 task generateSourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -62,14 +62,14 @@ bintray {
         userOrg = 'zarinpali'
 
         version {
-            name = '0.4.1.1'
+            name = '0.4.1.3'
             desc = 'Zarinpal Custom Views'
             released = new Date()
-            vcsTag = '0.4.1.1'
+            vcsTag = '0.4.1.3'
         }
 
         licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/hossein-amini/bottom-sheet'
+        vcsUrl = 'https://github.com/hossein-amini/Views'
         websiteUrl = 'https://www.zarinpal.com/'
     }
     configurations = ['archives']
